force-app/main/default/objects/Applicant_Response__c/Applicant_Response__c.object-meta.xml
<CustomObject>
    <description>Used to capture response of a question provided by an applicant</description>
    <label>Applicant Response</label>
    <nameField>
        <label>Applicant Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>