force-app/main/default/objects/Applicant_Response__c/fields/Applicant_Response_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Response_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Applicant Response Number</label>
    <type>AutoNumber</type>
</CustomField>