force-app/main/default/objects/Applicant_Response__c/fields/Program_Application__c.field-meta.xml
<CustomField>
    <fullName>Program_Application__c</fullName>
    <inlineHelpText>Applicant response on the program application</inlineHelpText>
    <label>Program Application</label>
    <referenceTo>Program_Application__c</referenceTo>
    <relationshipLabel>Applicant Responses</relationshipLabel>
    <relationshipName>Applicant_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>