force-app/main/default/objects/Applicant_Response__c/fields/Program_Question__c.field-meta.xml
<CustomField>
    <fullName>Program_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program question of which applicant has answered</inlineHelpText>
    <label>Program Question</label>
    <referenceTo>Program_Question__c</referenceTo>
    <relationshipLabel>Applicant Responses</relationshipLabel>
    <relationshipName>Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>