force-app/main/default/objects/Applicant_Response__c/fields/Program_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Program_Question_Answer__c</fullName>
    <inlineHelpText>Correct answer of the question of a specific Program Type</inlineHelpText>
    <label>Program Question Answer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>