force-app/main/default/objects/Applicant_Response__c/fields/Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Question_Answer__c</fullName>
    <label>Question Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>